@@ -337,6 +337,8 @@ Bug Fixes:
  -- Fix SIGSEGV in SCRAMBLE().
  -- Alierak fixes strcat() given that its assumptions about TinyExec are no
     longer true.
+ -- Only allow printable characters in identd.  The slave process on Unix
+    does this.  The threaded implementation for Win32 didn't.
 
 
 Performance Enhancements:
